Adds reverse list button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           {{ todo.text }}
         </li>
       </ol>
+      <button v-on:click="reverseList">Reverse List</button>
     </div>
     <div id="app-5">
       <p>{{ message }}</p>
