--- a/todos.html
+++ b/todos.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <title>Todos Vue.js</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="todos.js" defer></script>
   </head>
   <body>
     <h1>Hello from HTML!</h1>
     <div id="app">
       {{ message }}
+      <button v-on:click="loadTodos()">Load Todos</button>
       <div v-for="todo for todos">
         <ol>
           <li>
